--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require bootstrap
+ *= require ie10-viewport-bug-workaround.css
+ *= require jumbotron.css
  */
