--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,10 +5,11 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello there, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1>Welcome to My Recipes</h1>
+        <h2>The best recipe sharing app!</h2>
+        <p><%= link_to "Sign up or log in",  "#", class: 'btn btn-danger btn-lg' %></p>
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
-        <%= link_to("To Home Page", pages_home_path, :class => 'btn btn-primary btn-lg') %>
+        <%#= link_to("To Home Page", pages_home_path, :class => 'btn btn-primary btn-lg') %>
       </div>
     </div>
 
