--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to MyRecipes App</h1>
 
-<%= link_to("Back to Index", pages_index_path, :class => 'btn btn-primary btn-lg') %>
+<h2>There's more to come !!</h2>
