New Footer and jumbo margins

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,3 +42,11 @@
   background-color: #f4fc05;
   color:black;
 }
+.myFooter {
+  background-color: #073815;
+  color: #fff;
+  border-color: #073815;
+}
+.container {
+  margin-left: 100px;
+}
