--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   </body>
 
   <footer>
-    <div class = "container-wide">
+    <div class = "container-wide myFooter">
       <p>&copy; 2017 Green Leaf Services</p>
     </div>
   </footer>
