After New Recipe Form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,3 +50,16 @@
 .container {
   margin-left: 100px;
 }
+.well a {
+  color: #073B15;
+}
+.chef_info {
+  margin-top: 10px;
+}
+
+.description {
+  margin-top: 0;
+}
+.colormatch a {
+  color: #073B15;
+}
