--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "My Recipes", pages_index_path, class: 'navbar-brand', id: "logo" %>
+      <%= link_to "My Recipes", recipes_path, class: 'navbar-brand', id: "logo" %>
       <!-- <a class="navbar-brand" href="#">MyRecipes</a> -->
     </div>
 
