--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,43 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Recipes App: <%= @page_title || "Admin Area" %></title>
-    <!-- <link rel="stylesheet" type="text/css" href="app\assets\stylesheets\styles.css"> -->
-
-  </head>
-  <body>
-
-    <div id="header">
-        <h1>Recipes App</h1>
-    </div>
-      <div id="main">
-        <!--  ***************  Check for any alerts, error or notices to be flashed *********************  -->
-        <% if !flash[:alert].blank? %>
-          <div class="alert">
-            <%= flash[:alert] %>
-          </div>
-        <% end %>
-        <% if !flash[:error].blank? %>
-          <div class="error">
-            <%= flash[:error] %>
-          </div>
-        <% end %>
-        <% if !flash[:notice].blank? %>
-          <div class="notice">
-            <%= flash[:notice] %>
-          </div>
-        <% end %>
-
-        <div id="content">
-  <!-- before yield -->
-        <%= yield %>
-  <!-- after yield -->
-        </div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-<%= name %>">
+        <a href="#" class="close" data-dismiss="alert">&#215;</a>
+        <%= msg %>
       </div>
-
-  <div id="footer">
-    <p id="copyright">&copy; green-leaf-services.com</p>
+    <% end %>
   </div>
-
-  </body>
-</html>
+</div>
