--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/page_title', title: @recipe.name %>
 
-<div class="well col-md-8 col-md-offset-2">
+<div class="well col-md-12 col-md-offset-2">
   <h4 class="center description"><strong>Steps: </strong></h4>
   <hr />
   <%= simple_format(@recipe.description) %>
@@ -18,3 +18,11 @@
     </p>
   </div>
 </div>
+
+<div class="col-md-2"></div>
+<div class="recipe-actions">
+  <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: 'btn btn-sm btn-warning' %>
+  <%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-danger" %>
+
+</div>
+</br>
