--- a/app/views/layouts/_JMS_navigation.html.erb
+++ b/app/views/layouts/_JMS_navigation.html.erb
@@ -1,3 +1,4 @@
+<!-- <nav class="navbar navbar-default"> -->
 <nav class="navbar-custom navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -8,18 +9,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "MyRecipes", root_path, class: "navbar-brand", id: "logo" %>
+      <%= link_to "My Recipes", recipes_path, class: 'navbar-brand', id: "logo" %>
+      <!-- <a class="navbar-brand" href="#">MyRecipes</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+       <li> <%= link_to("To Home Page", pages_home_path, :class => 'btn  btn-lg') %> </li>
+        <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
         <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Create a new recipe", new_recipe_path %></li>
+            <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
