--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,23 @@
-<h1>Welcome to MyRecipes App</h1>
+<div class="jumbotron center">
+  <h1>Welcome to MyRecipes</h1>
+  <h2>The best recipe sharing app!</h2>
+  <p><%= link_to "View All Recipes", recipes_path, class: "btn btn-mybtn1 btn-lg btn-xlarge" %></p>
+</div>
 
-<h2>There's more to come !!</h2>
+<div class="row">
+  <div class="col-lg-4">
+    <h2>Explore Recipes</h2>
+    <p>We have a ton of recipes for you to explore, not sure about the app yet? Don't worry just view as a guest, we're sure you'll come back to sign-up at a later time</p>
+    <p><%= link_to "View all recipes as a Guest!", recipes_path, class: "btn btn-mybtn1 btn-xlarge" %></p>
+  </div>
+  <div class="col-lg-4">
+    <h2>Unlock all features!</h2>
+    <p>Sign up for the app and unlock all it's magic, create and share recipes, hangout with chefs in the chefchat, comment on recipes you have tried out, like/dislike and much much more!</p>
+    <p><%#= link_to "Sign up for an account", signup_path, class: "btn btn-primary btn-xlarge" %></p>
+ </div>
+  <div class="col-lg-4">
+    <h2>Have an ingredient, need ideas?</h2>
+    <p>View our ingredients listing page and select an ingredient that you have to view recipes associated with it for cooking ideas!</p>
+    <p><%#= link_to "View ingredients listing", ingredients_path, class: "btn btn-primary btn-xlarge" %></p>
+  </div>
+</div>
