Chef Display, Edit and Entry

--- a/app/views/chefs/new.html.erb
+++ b/app/views/chefs/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Chefs#new</h1>
-<p>Find me in app/views/chefs/new.html.erb</p>
+<%= render 'shared/page_title', title: "Enter information for a new Chef" %>
+<!-- the new and edit form both use the partial _form -->
+<%= render 'form' %>
