--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,3 +1,3 @@
 <%= render 'shared/page_title', title: "edit an existing recipe" %>
-# the new and edit form both use the partial _form
+<!-- the new and edit form both use the partial _form -->
 <%= render 'form' %>
