--- a/app/views/chefs/edit.html.erb
+++ b/app/views/chefs/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Chefs#edit</h1>
-<p>Find me in app/views/chefs/edit.html.erb</p>
+<%= render 'shared/page_title', title: "edit an existing Chef" %>
+<!-- the new and edit form both use the partial _form -->
+<%= render 'form' %>
