After Chef Create Fixes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
-<div class="jumbotron center">
-  <h1>Welcome to MyRecipes</h1>
-  <h2>The best recipe sharing app!</h2>
-  <p><%= link_to "View All Recipes", recipes_path, class: "btn btn-mybtn1 btn-lg btn-xlarge" %></p>
+<div class="jumbotron">
+  <div class="text-align-1">
+    <h1>Welcome to MyRecipes</h1>
+    <h2>The best recipe sharing app!</h2>
+    <p><%= link_to "Sign up today!", signup_path, class: "btn btn-mybtn1 btn-lg btn-xlarge" %></p>
+  </div>  
 </div>
 
 <div class="row">
