--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form_for(@chef, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-md-2">
-          <%= f.label :name %>
+          <%= f.label :Name, "Name"%>
         </div>
         <div class="col-md-8">
           <%= f.text_field :name, class: "form-control", placeholder: "Chef Name", autofocus: true %>
@@ -15,15 +15,31 @@
       </div>
       <div class="form-group">
         <div class="control-label col-md-2">
-          <%= f.label :email %>
+          <%= f.label :Email %>
         </div>
         <div class="col-md-8">
-          <%= f.text_field :email, rows: 10, class: "form-control", placeholder: "Enter email" %>
+          <%= f.email_field :email, rows: 10, class: "form-control", placeholder: "Enter email" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :password %>
+        </div>
+        <div class="col-md-8">
+          <%= f.password_field :password, rows: 10, class: "form-control", placeholder: "Choose a password" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :password_confirmation, "Confirm Password"%>
+        </div>
+        <div class="col-md-8">
+          <%= f.password_field :password_confirmation, rows: 10, class: "form-control", placeholder: "Re-enter the password" %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-          <%= f.submit class: "btn btn-mybtn1" %>
+          <%= f.submit "Create my Account", class: "btn btn-mybtn1" %>
         </div>
       </div>
     <% end %>
