--- a/app/views/chefs/new.html.erb
+++ b/app/views/chefs/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Enter information for a new Chef" %>
+<%= render 'shared/page_title', title: "Sign up for the application" %>
 <!-- the new and edit form both use the partial _form -->
 <%= render 'form' %>
