--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,7 +31,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chefs <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Create a new chef", new_chef_path %></li>
+            <li><%= link_to "Create a new chef", signup_path %></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
