--- a/app/views/chefs/edit.html.erb
+++ b/app/views/chefs/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "edit an existing Chef" %>
+<%= render 'shared/page_title', title: "Edit Your Profile" %>
 <!-- the new and edit form both use the partial _form -->
 <%= render 'form' %>
