--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,12 +1,13 @@
-<%= render 'shared/page_title', title: @chef.name %>
+<%= render 'shared/page_title', title: "Chef #{@chef.name}'s profile" %>
 
-<div class="well col-md-12 col-md-offset-2">
-  <p class="center">
-    <h2><%= @chef.name.capitalize %></h2>
-  </p>
-  <p><%= link_to gravatar_for(@chef, size: 50)%></p>
-  <p><%= @chef.email %></p>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4 center">
+  <%= gravatar_for(@chef, size: 150)%>
+  </div>
 </div>
+
+<h2 align="center"><%= @chef.name %>'s recipes</h2>
+<%= render 'recipes/recipe', obj:@chef.recipes %>
 
 <div class="col-md-2"></div>
 <div class="recipe-actions">
