--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -1,26 +1,26 @@
 <%= render 'shared/page_title', title: "Chef Listing" %>
 
-<!-- <%# @chefs.each do |chef| %>
-  <div class="row">
-    <div class="col-md-2">
-      <section class="chef_info center">
-        <%#= gravatar_for(chef.email, size: 50) %>
-      </section>
-    </div>
-
-  </div>
-<%# end %> -->
+<div align="center">
+  <%= will_paginate %>
+</div>
 
 <table class = "table mytable-1">
   <tr>
     <th>Icon </th>
     <th>Name</th>
+    <th>Recipes</th>
     <th>Email</th>
   </tr>
   <% @chefs.each do |chef| %>
     <tr>
-      <td><%= gravatar_for(chef, size: 50) %></td>
-      <td><%= link_to chef.name, chef_path(chef) %></td>
+      <td><%= link_to gravatar_for(chef, size: 50), chef_path(chef) %></td>
+      <td><%= link_to chef.name.capitalize, chef_path(chef) %></td>
+      <td><%= pluralize(chef.recipes.count, "recipe") if chef.recipes %></td>
       <td><%= chef.email %></td>
     </tr>
   <% end %>
+</table>
+
+<div align="center">
+  <%= will_paginate %>
+</div>
