--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,13 +1,18 @@
 <%= render 'shared/page_title', title: "Chef #{@chef.name}'s profile" %>
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-4 center">
-  <%= gravatar_for(@chef, size: 150)%>
+<!-- <div class="row"> -->
+  <!-- <div class="col-md-4 col-md-offset-4 center">
+  <%#= gravatar_for(@chef, size: 50)%>
   </div>
-</div>
+</div> -->
 
-<h2 align="center"><%= @chef.name %>'s recipes</h2>
-<%= render 'recipes/recipe', obj:@chef.recipes %>
+<h3 align="center"><%= @chef.name %>'s recipes</h3>
+<!-- the @chef_recipes instance variable is defined in the ChefsController  -->
+<div class="center">
+    <%= will_paginate @chef_recipes %>
+</div>
+<!--Now that we are using the data instance and not the entire table, we use it as the reference for the rendered object passwordsed to teh partial  -->
+<%= render 'recipes/recipe', obj:@chef_recipes %>
 
 <div class="col-md-2"></div>
 <div class="recipe-actions">
