--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -10,6 +10,7 @@
     <th>Name</th>
     <th>Recipes</th>
     <th>Email</th>
+    <th>Action</th>
   </tr>
   <% @chefs.each do |chef| %>
     <tr>
@@ -17,6 +18,7 @@
       <td><%= link_to chef.name.capitalize, chef_path(chef) %></td>
       <td><%= pluralize(chef.recipes.count, "recipe") if chef.recipes %></td>
       <td><%= chef.email %></td>
+      <td><%= link_to "Delete this chef", chef_path(chef), method: :delete, data: {confirm: "Are you sure you want to delete this chef and all associated recipes?"} %></td>
     </tr>
   <% end %>
 </table>
