--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -45,7 +45,7 @@
       </div>
     <% end %>
     <div class="col-md-4 col-md-offset-4 colormatch">
-      [ <%= link_to "Cancel request and return to chef listing", recipes_path %> ]
+      [ <%= link_to "Cancel request and return to Home Page", root_path %> ]
     </div>
   </div>
 </div>
