--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,12 +21,13 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
 
               <ul class="dropdown-menu my-dropdown-menu">
-                <li><%= link_to "My Recipes Listing", recipes_path %></li>
+                <!-- <li><%#= link_to "My Recipes Listing", recipes_path %></li> -->
+                <li><%= link_to "View my recipes", chef_path(current_chef) %></li>
                 <li><%= link_to "Create a new recipe", new_recipe_path %></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><%= link_to "View all recipes", recipes_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">One more separated link</a></li>
               </ul>
@@ -55,6 +56,7 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><%#= link_to "Log In", login_path %></li> -->
         <% if logged_in? %>
+          <li class = "dropdown">Logged in as <%= current_chef.name%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
             <ul class="dropdown-menu my-dropdown-menu">
