--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,11 +21,14 @@
 
 <div class="col-md-2"></div>
 <div class="recipe-actions">
-  <% if logged_in? %>
+  <% if logged_in? && current_chef == @recipe.chef %>
     <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: 'btn btn-sm btn-warning' %>
     <%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-danger" %>
+    <%= link_to "View my recipes only", chef_path(current_chef), class: "btn btn-sm btn-primary" %>
+    <%= link_to "View all recipes", recipes_path, class: "btn btn-sm btn-primary" %>
+  <% else %>
+    <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-primary" %>
   <% end %>
-  <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-primary" %>
 
 </div>
 </br>
