--- a/app/views/layouts/2bd_navigation.html.erb
+++ b/app/views/layouts/2bd_navigation.html.erb
@@ -8,20 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <% if logged_in? %>
-        <%= link_to 'Log out', logout_path, method: :delete, class: "navbar-brand", id: "logo" %>
-      <% else %>
-        <%= link_to "Log In", login_path , class: "navbar-brand", id: "logo" %>
-      <% end %>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <% if logged_in? %>
+      <%= link_to "Home Page", root_path, class: "navbar-brand", id: "logo" %>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+    <% if logged_in? %>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li> -->
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
 
@@ -36,6 +29,7 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="#">One more separated link</a></li>
               </ul>
+
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chefs <span class="caret"></span></a>
@@ -50,30 +44,33 @@
             </ul>
           </li>
         </ul>
-      <% end %>
+    <% end %>
+    <div>
       <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <!-- <li><%#= link_to "Log In", login_path %></li> -->
-        <% if logged_in? %>
-          <li class = "dropdown">Logged in as <%= current_chef.name%></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
-            <ul class="dropdown-menu my-dropdown-menu">
-              <li><%= link_to 'View my profile', chef_path(current_chef) %></li>
-              <li><%= link_to 'Edit my profile', edit_chef_path(current_chef) %></li>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Log In", login_path %></li>
-        <% end %>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <!-- <li><%#= link_to "Log In", login_path %></li> -->
+          <% if logged_in? %>
+            <li class = "dropdown">Logged in as <%= current_chef.name%></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
+              <ul class="dropdown-menu my-dropdown-menu">
+                <li><%= link_to 'View my profile', chef_path(current_chef) %></li>
+                <li><%= link_to 'Edit my profile', edit_chef_path(current_chef) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+
+            <li><%= link_to "Log In", login_path %></li>
+          <% end %>
+        </ul>
+      </div>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
