--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -81,19 +81,19 @@
   line-height: 2.5;
   vertical-align: top;
   border-top: 1px solid #ddd
-  // a {
-  //   color: #073B15;
-  //   a:hover {
-  //     text-decoration: none;
-  //   }
-  // }
-
 }
-
+.mytable-1 a {
+  color: #073B15;
+  text-decoration: none;
+}
 .center {
   text-align: center;
   margin-top: 0px;
 }
 .my-dropdown-menu {
   background-color: #8ddda4;
+}
+.nav-text {
+  text-align: center;
+  padding-top: 15px;
 }
