--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -60,7 +60,7 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><%#= link_to "Log In", login_path %></li> -->
         <% if logged_in? %>
-          <li class = "dropdown">Logged in as <%= current_chef.name%></li>
+          <li class = "nav-text">Logged in as <%= current_chef.name%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
             <ul class="dropdown-menu my-dropdown-menu">
