--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -9,12 +9,14 @@
       <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p><%= truncate(recipe.description, length: 150) %></p>
       <p>
-        <span class="quiet"><small>Created
-
-            <%= time_ago_in_words(recipe.created_at) %>
-
-           ago</small></span>
+        <span class="quiet"><small>Created <%= time_ago_in_words(recipe.created_at) %> ago</small></span>
       </p>
+      <% if logged_in? && current_chef == recipe.chef %>
+        <div class="recipe-actions">
+          <%= link_to "Edit this recipe", edit_recipe_path(recipe), class: 'btn btn-sm btn-warning' %>
+          <%= link_to "Delete this recipe", recipe_path(recipe), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-danger" %>
+        </div>
+      <% end %>
     </div>
   </div>
 <% end %>
