--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -21,6 +21,14 @@
           <%= f.email_field :email, rows: 10, class: "form-control", placeholder: "Enter email" %>
         </div>
       </div>
+      <!-- <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :Admin %>
+        </div>
+        <div class="col-md-8">
+          <%= f.text_field :admin, rows: 10, class: "form-control", placeholder: "0 or 1" %>
+        </div>
+      </div> -->
       <div class="form-group">
         <div class="control-label col-md-2">
           <%= f.label :password %>
