--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -16,11 +16,15 @@
 
 <div class="col-md-2"></div>
 <div class="recipe-actions">
+  <!-- Allow individual chefs to Edit/delete their profie and recipes -->
   <% if logged_in? && current_chef.id == @chef.id %>
-    <%= link_to "Edit this Chef", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
-    <%= link_to "Delete chef", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-danger" %>
+    <%= link_to "Edit my Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
+    <%= link_to "Delete my Profile/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete your profile and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+  <!-- Allow admins to Edit/delete any chef and their recipes -->
+  <% elsif logged_in? && current_chef.admin%>
+    <%= link_to "Edit Chef's Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
+    <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
   <% end %>
   <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-sm btn-primary" %>
-
 </div>
 </br>
