--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -59,16 +59,20 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><%#= link_to "Log In", login_path %></li> -->
+
         <% if logged_in? %>
           <li class = "nav-text">Logged in as <%= current_chef.name%></li>
+          <% if current_chef.admin? %>
+            <li class = "nav-text">  - Admin </li>
+          <%end %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
-            <ul class="dropdown-menu my-dropdown-menu">
-              <li><%= link_to 'View my profile', chef_path(current_chef) %></li>
-              <li><%= link_to 'Edit my profile', edit_chef_path(current_chef) %></li>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-            </ul>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
+          <ul class="dropdown-menu my-dropdown-menu">
+            <li><%= link_to 'View my profile', chef_path(current_chef) %></li>
+            <li><%= link_to 'Edit my profile', edit_chef_path(current_chef) %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+          </ul>
           </li>
         <% else %>
           <li><%= link_to "Log In", login_path %></li>
