Pre-Admin New User Create

--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -48,7 +48,7 @@
 
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-          <%= f.submit(@chef.new_record? ? "Create my Account" : "Update my Account", class: "btn btn-mybtn1") %>
+          <%= f.submit(@chef.new_record? ? "Create Account" : "Update Account", class: "btn btn-mybtn1") %>
         </div>
       </div>
     <% end %>
