--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -9,7 +9,7 @@
       <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p><%= truncate(recipe.description, length: 150) %></p>
       <p>
-        <span class="quiet"><small>Created <%= time_ago_in_words(recipe.created_at) %> ago</small></span>
+        <span class="quiet"><small>Last Updated <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
       </p>
       <% if logged_in? && current_chef == recipe.chef %>
         <div class="recipe-actions">
