After Fixing Admin Access to own records

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,11 @@
   background-color: #f4fc05;
   color:black;
 }
+.btn-mybtn1:focus {
+  background-color: #073815;
+  color: #f4fc05;
+  border-color: #073815;
+}
 .myFooter {
   background-color: #073815;
   color: #fff;
