--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="text-align-1">
     <h1>Welcome to MyRecipes</h1>
     <h2>The best recipe sharing app!</h2>
-    <p><%= link_to "Sign up today!", signup_path, class: "btn btn-mybtn1 btn-lg btn-xlarge" %></p>
+    <p><%= link_to "Sign up today!", signup_path, class: "btn btn-mybtn1 btn-lg btn-xlarge" %> <%= link_to "Log In", login_path , class: "btn btn-mybtn1 btn-lg btn-xlarge" %></p>
   </div>
 </div>
 
@@ -17,7 +17,7 @@
   <div class="col-lg-4">
     <h2>Unlock all features!</h2>
     <p>Sign up for the app and unlock all it's magic, create and share recipes, hangout with chefs in the chefchat, comment on recipes you have tried out, like/dislike and much much more!</p>
-    <p><%#= link_to "Sign up for an account", signup_path, class: "btn btn-primary btn-xlarge" %></p>
+    <p><%= link_to "Sign up for an account", signup_path, class: "btn btn-mybtn1 btn-primary btn-xlarge" %></p>
  </div>
   <div class="col-lg-4">
     <h2>Have an ingredient, need ideas?</h2>
