--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -7,6 +7,9 @@
 </div> -->
 
 <h3 align="center"><%= @chef.name %>'s recipes</h3>
+<% if logged_in? && current_chef.id == @chef.id %>
+  <p class = "center"><%= link_to "Create a new recipe", new_recipe_path %></p>
+<% end %>
 <!-- the @chef_recipes instance variable is defined in the ChefsController  -->
 <div class="center">
     <%= will_paginate @chef_recipes %>
@@ -17,17 +20,20 @@
 <div class="col-md-2"></div>
 <div class="recipe-actions">
   <!-- Allow individual chefs to Edit/delete their profile and recipes -->
-  <% if logged_in? && current_chef.id == @chef.id %>
-    <%= link_to "Edit my Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
-    <!-- An admin cannot delete his own profile/recipes -->
-    <% if !current_chef.admin %>
-      <%= link_to "Delete my Profile/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete your profile and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
-    <% end %>
-  <!-- Allow admins to Edit/delete any other chef and their recipes -->
-  <% elsif logged_in? && current_chef.admin%>
-    <%= link_to "Edit Chef's Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
-    <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+  <% if logged_in? %>
+      <% if current_chef.id == @chef.id %>
+        <%= link_to "Edit my Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
+        <!-- An admin cannot delete his own profile/recipes -->
+        <% if !current_chef.admin? %>
+          <%= link_to "Delete my Profile/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete your profile and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+        <% end %>
+      <!-- If an admin and not in my profile, I can do all actions -->
+      <% elsif current_chef.admin? %>
+        <%= link_to "Edit Chef's Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
+        <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+      <% end %>
+    <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-sm btn-primary" %>
   <% end %>
-  <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-sm btn-primary" %>
+
 </div>
 </br>
