Added Ingredients Edit and Update

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4920,8 +4920,12 @@ a.label:focus {
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  background-color: #777;
+  /*background-color: #777;*/
+  background-color: yellow;
   border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #073815;
 }
 .badge:empty {
   display: none;
