--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,6 +91,19 @@
   color: #073B15;
   text-decoration: none;
 }
+.mytable-2 {
+  width: 450px;
+  color: #073B15;
+  margin-left: 400px;
+  padding: 8px;
+  line-height: 2.5;
+  vertical-align: top;
+  border-top: 1px solid #ddd
+}
+.mytable-2 a {
+  color: #073B15;
+  text-decoration: none;
+}
 .center {
   text-align: center;
   margin-top: 0px;
