--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,6 +22,6 @@
   <div class="col-lg-4">
     <h2>Have an ingredient, need ideas?</h2>
     <p>View our ingredients listing page and select an ingredient that you have to view recipes associated with it for cooking ideas!</p>
-    <p><%#= link_to "View ingredients listing", ingredients_path, class: "btn btn-primary btn-xlarge" %></p>
+    <p><%= link_to "View ingredients listing", ingredients_path, class: "btn btn-mybtn1 btn-primary btn-xlarge" %></p>
   </div>
 </div>
