--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -8,8 +8,11 @@
     <div class="col-md-8 well">
       <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p><%= truncate(recipe.description, length: 150) %></p>
+      <% if recipe.ingredients.any? %>
+        <p>Ingredients: <%= render recipe.ingredients %> </p>
+      <% end %>
       <p>
-        <span class="quiet"><small>Last Updated <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
+        <span class="quiet"><small>Last Updated <%= time_ago_in_words(recipe.updated_at) %> ago by <%= recipe.chef.name.capitalize %></small></span>
       </p>
       <% if logged_in? && current_chef == recipe.chef %>
         <div class="recipe-actions">
