--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,7 +10,7 @@
       <em>Created by:</em>
     </p>
     <p class="center">
-      <%= link_to gravatar_for(@recipe.chef, size: 50), recipes_path %>
+      <%= link_to gravatar_for(@recipe.chef, size: 50), chef_path(@recipe.chef) %>
     </p>
     <p class="center">
       <small><%= @recipe.chef.name.capitalize %></small>
