--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,27 +16,12 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-
+<!-- *********************************  Chefs ************************************** -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <% if logged_in? %>
         <ul class="nav navbar-nav">
           <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Link</a></li> -->
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
-
-              <ul class="dropdown-menu my-dropdown-menu">
-                <!-- <li><%#= link_to "My Recipes Listing", recipes_path %></li> -->
-                <li><%= link_to "View my recipes", chef_path(current_chef) %></li>
-                <li><%= link_to "Create a new recipe", new_recipe_path %></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><%= link_to "View all recipes", recipes_path %></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chefs <span class="caret"></span></a>
             <ul class="dropdown-menu my-dropdown-menu">
@@ -49,6 +34,36 @@
               <li><a href="#">One more separated link</a></li>
             </ul>
           </li>
+<!-- *********************************  Recipes ************************************** -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
+
+              <ul class="dropdown-menu my-dropdown-menu">
+                <li><%= link_to "View my recipes", chef_path(current_chef) %></li>
+                <li><%= link_to "Create a new recipe", new_recipe_path %></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "View all recipes", recipes_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+          </li>
+<!-- *********************************  Ingredients ************************************** -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ingredients<span class="caret"></span></a>
+
+              <ul class="dropdown-menu my-dropdown-menu">
+                <li><%= link_to "View Ingredients", ingredients_path %></li>
+                <% if logged_in? && current_chef.admin? %>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to "New Ingredient", new_ingredient_path %></li>
+                <% end %>
+                <% Ingredient.all.each do |ing| %>
+                  <li><%= link_to ing.name.capitalize, ingredient_path(ing) %></li>
+                <% end %>
+              </ul>
+          </li>
         </ul>
       <% end %>
       <form class="navbar-form navbar-left">
@@ -57,6 +72,7 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      <%= link_to "Home Page", root_path, class: "navbar-brand", id: "logo"%>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><%#= link_to "Log In", login_path %></li> -->
 
