--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -24,7 +24,7 @@
       <div class="form-group">
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
-            <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name do |cb|%>
+            <%= f.collection_check_boxes :ingredient_ids, Ingredient.sorted, :id, :name do |cb|%>
               <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox")+ cb.text} %>
             <% end %>
           </div>
