--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,11 +1,12 @@
 <% obj.each do |recipe| %>
   <div class="row">
-    <div class="col-md-2">
+    <!-- <div class="col-md-2">
       <section class="chef_info center">
         <%= gravatar_for(recipe.chef, size: 50) %>
       </section>
-    </div>
-    <div class="col-md-8 well">
+    </div> -->
+    <!-- <div class="col-md-8 well"> -->
+      <div class="well col-md-10 mycol-md-offset-1">
       <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p><%= truncate(recipe.description, length: 150) %></p>
       <% if recipe.ingredients.any? %>
