--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -1,2 +1,2 @@
 <span class="badge"><%= link_to ingredient.name.capitalize,
-                      ingredient_path(ingredient) %>&nbsp;</span>
+                      ingredient_path(ingredient) %></span>
