--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,3 +1,4 @@
 <%= render 'shared/page_title', title: "Create a new Recipe" %>
 <!-- the new and edit form both use the partial _form -->
 <%= render 'form' %>
+<div>TEST</div>
