--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,7 +55,51 @@
 .container {
   margin-left: 100px;
 }
+.well-half {
+  width:45%;
+  height: auto;
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 2px solid #073815;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.well-half a {
+  color: #073B15;
+}
+.well-full {
+  width:95%;
+  height: auto;
+  // min-height: 20px;
+  padding: 19px;
+  // margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 2px solid #073815;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.well-full a {
+  color: #073B15;
+}
 .well a {
+  color: #073B15;
+}
+.well-80 {
+  width:80%;
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 2px solid #073815;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.well-80 a {
   color: #073B15;
 }
 .chef_info {
@@ -70,6 +114,7 @@
 }
 
 .recipe-actions {
+  width: 100%;
   padding-top: 5px;
   a {
     color: #000;
