--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: "Chef #{@chef.name}'s profile" %>
+<!-- <%= render 'shared/page_title', title: "Chef #{@chef.name}'s profile" %> -->
 
 <!-- <div class="row"> -->
   <!-- <div class="col-md-4 col-md-offset-4 center">
