--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -54,14 +54,14 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ingredients<span class="caret"></span></a>
 
               <ul class="dropdown-menu my-dropdown-menu">
-                <li><%= link_to "View Ingredients", ingredients_path %></li>
+                <li><%= link_to "Ingredients/Recipes Listing", ingredients_path %></li>
                 <% if logged_in? && current_chef.admin? %>
                   <li role="separator" class="divider"></li>
                   <li><%= link_to "New Ingredient", new_ingredient_path %></li>
                 <% end %>
-                <% Ingredient.all.each do |ing| %>
+                <!-- <% Ingredient.all.each do |ing| %>
                   <li><%= link_to ing.name.capitalize, ingredient_path(ing) %></li>
-                <% end %>
+                <% end %> -->
               </ul>
           </li>
         </ul>
@@ -84,7 +84,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
           <ul class="dropdown-menu my-dropdown-menu">
-            <li><%= link_to 'View my profile', chef_path(current_chef) %></li>
+            <li><%= link_to 'View my recipes', chef_path(current_chef) %></li>
             <li><%= link_to 'Edit my profile', edit_chef_path(current_chef) %></li>
             <li role="separator" class="divider"></li>
             <li><%= link_to 'Log out', logout_path, method: :delete %></li>
