--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -21,21 +21,23 @@
 <% end %>
 
 <div class="col-md-2"></div>
-<div class="recipe-actions">
+<div class="center recipe-actions">
   <!-- Allow individual chefs to Edit/delete their profile and recipes -->
   <% if logged_in? %>
       <% if current_chef.id == @chef.id %>
-        <%= link_to "Edit my Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
+        <%= link_to "Edit my Profile", edit_chef_path(@chef), class: 'btn btn-mybtn1' %>
         <!-- An admin cannot delete his own profile/recipes -->
         <% if !current_chef.admin? %>
-          <%= link_to "Delete my Profile/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete your profile and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+          <%= link_to "Delete my Profile/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete your profile and all associated recipes?" }, class: "btn btn-mybtn1" %>
         <% end %>
+
       <!-- If an admin and not in my profile, I can do all actions -->
       <% elsif current_chef.admin? %>
-        <%= link_to "Edit Chef's Profile", edit_chef_path(@chef), class: 'btn btn-sm btn-warning' %>
-        <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-sm btn-danger" %>
+        <%= link_to "Edit Chef's Profile", edit_chef_path(@chef), class: 'btn btn-mybtn1' %>
+        <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-mybtn1" %>
       <% end %>
-    <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-sm btn-primary" %>
+    <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-mybtn1" %>
+    <%= link_to "Show my Recipes", recipes_path, class: 'btn btn-mybtn1' %>
   <% end %>
 
 </div>
