--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -37,7 +37,7 @@
         <%= link_to "Delete this Chef/Recipes", chef_path(@chef), method: :delete, data: { confirm: "Are you sure you want to delete this chef and all associated recipes?" }, class: "btn btn-mybtn1" %>
       <% end %>
     <%= link_to "Return to Chef listing", chefs_path, class: "btn btn-mybtn1" %>
-    <%= link_to "Show my Recipes", recipes_path, class: 'btn btn-mybtn1' %>
+    <%= link_to "Show All Recipes", recipes_path, class: 'btn btn-mybtn1' %>
   <% end %>
 
 </div>
