--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,13 +1,13 @@
-<table class = "table mytable-1100">
+<!-- Used to list recipes -->
+<table class = "mytable-90">
 
   <tr>
     <th>Recipe</th>
     <th>Description</th>
     <th>Ingredients</th>
-    <th>Comments?</th>
     <th>Action</td>
+    <th>Comments?</th>
   </tr>
-
 
   <% obj.each do |recipe| %>
     <tr>
@@ -18,16 +18,19 @@
       <% else %>
         <td>No ingredients specified</td>
       <% end %>
-      <% if recipe.comments.any? %>
-        <td> <%= recipe.comments.count %></td>
-      <% else %>
-        <td>No comments yet</td>
-      <% end %>
       <% if logged_in? && current_chef == recipe.chef %>
         <h3><td>
           <%= link_to "Edit  ", edit_recipe_path(recipe), class: "myLink" %>
           &nbsp;
-          <%= link_to "Delete ", recipe_path(recipe), method: :delete, data: { confirm: "Are you sure you want to delete this recipe?"}, class: "myLink" %></td></h3>
+          <%= link_to "Delete ", recipe_path(recipe), method: :delete, data: { confirm: "Are you sure you want to delete this recipe?"}, class: "myLink" %>
+        </td></h3>
+      <% else %>
+        <td></td>
+      <% end %>
+      <% if recipe.comments.any? %>
+        <td> <%= recipe.comments.count %></td>
+      <% else %>
+        <td>No comments yet</td>
       <% end %>
     </tr>
   <% end %>
