--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,4 @@
+<!-- Shows individual recipe details -->
 <%= render 'shared/page_title', title: @recipe.name %>
 
 <div class="well-half col-md-6 mycol-md-offset-1">
@@ -33,21 +34,24 @@
   <div class="recipe-actions">
     <% if logged_in? %>
       <% if current_chef == @recipe.chef %>
-        <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: 'btn btn-sm btn-warning' %>
-        <%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-danger" %>
-        <%= link_to "View my recipes only", chef_path(current_chef), class: "btn btn-sm btn-primary" %>
-        <%= link_to "View all recipes", recipes_path, class: "btn btn-sm btn-primary" %>
+        <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: 'btn btn-sm btn-mybtn1' %>
+        <%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete, data: { confirm: "Are you sure you want to delete?" }, class: "btn btn-sm btn-mybtn1" %>
+        <%= link_to "View my recipes only", chef_path(current_chef), class: "btn btn-sm btn-mybtn1" %>
+        <%= link_to "View all recipes", recipes_path, class: "btn btn-sm btn-mybtn1" %>
       <% else %>
-          <div class="pull-right"><%= link_to gravatar_for(@recipe.chef, size: 30), chef_path(@recipe.chef) %>See all this chef's recipes</div>
-          <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-primary" %>
+          <div>
+            <%= link_to "See all this chef's recipes", chef_path(@recipe.chef), class: "btn btn-sm btn-mybtn1"  %>
+            <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-mybtn1" %>
+          </div>
       <% end %>
     <% else %>
-      <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-primary" %>
+      <%= link_to "Return to recipes listing", recipes_path, class: "btn btn-sm btn-mybtn1" %>
     <% end %>
+  </div>
 </section>
 
 
-</div>
+
 </br>
 <!-- Add the ability to add comment on this recipe -->
 <% if logged_in? %>
