--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<!-- <div class="row">
+<div class="row">
   <div class="col-md-2">
     <section class="chef_info center">
       <%= gravatar_for(comment.chef, size: 60) %>
@@ -7,9 +7,7 @@
   <div class="col-md-8 well">
     <p><%= comment.description %></p>
     <p>
-      <span class="quiet"><small>Created:
-                          <%= time_ago_in_words(comment.created_at) %> ago by
-                          <%= comment.chef.name %></small></span>
+      <span class="quiet"><small>Created:<%= time_ago_in_words(comment.created_at) %> ago by <%= comment.chef.name %></small></span>
     </p>
   </div>
-</div> -->
+</div>
