--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -6,17 +6,26 @@
   <!-- <%#= render(partial: 'comments/comment', object: comment) %> -->
   <table class = "table mytable-90">
     <tr>
-      <th>Icon </th>
       <th>Commentor</th>
       <th>Comment</th>
       <th>Comment Time</th>
+      <th>Action</th>
     </tr>
     <% comments.each do |comment| %>
       <tr>
-        <td><%= gravatar_for(comment.chef, size: 20) %></td>
+        <!-- <td><%= gravatar_for(comment.chef, size: 20) %></td> -->
         <td><%= comment.chef.name.capitalize %></td>
         <td><%= comment.description %></td>
         <td><%= time_ago_in_words(comment.created_at) %> ago</td>
+        <% if current_chef.id == comment.chef_id %>
+        <h3><td>
+          <%= link_to "Edit  ", edit_comment_path(comment), class: "myLink" %>
+          &nbsp;
+          <%= link_to "Delete ", comment_path(comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}, class: "myLink" %>
+        </td></h3>
+      <% else %>
+        <td></td>
+      <% end %>
       </tr>
     <% end %>
   </table>
