Setting up Comment Editing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -140,7 +140,8 @@
 .mytable-50 {
   width: 50%;
   color: #073B15;
-  margin-left: 400px;
+  //margin-left: 400px;
+  margin-left: 25%;
   padding: 8px;
   line-height: 2.5;
   vertical-align: top;
