--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -16,15 +16,19 @@
         <!-- <td><%= gravatar_for(comment.chef, size: 20) %></td> -->
         <td><%= comment.chef.name.capitalize %></td>
         <td><%= comment.description %></td>
-        <td><%= time_ago_in_words(comment.created_at) %> ago</td>
-        <% if current_chef.id == comment.chef_id %>
-        <h3><td>
-          <%= link_to "Edit  ", edit_comment_path(comment), class: "myLink" %>
-          &nbsp;
-          <%= link_to "Delete ", comment_path(comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}, class: "myLink" %>
-        </td></h3>
-      <% else %>
-        <td></td>
+        <td><%= time_ago_in_words(comment.updated_at) %> ago</td>
+        <% if logged_in? %>
+          <% if current_chef.id == comment.chef_id %>
+          <!-- session[:recipe_comment_id] = comment.recipe_id -->
+          <h3><td>
+            <% session[:recipe_comment_id]  = comment.recipe.id %>  <!--  So we can get back to the recipe show page -->
+            <%= link_to "Edit  ", edit_comment_path(comment), class: "myLink" %>
+            &nbsp;
+            <%= link_to "Delete ", comment_path(comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}, class: "myLink" %>
+          </td></h3>
+        <% else %>
+          <td></td>
+        <% end %>
       <% end %>
       </tr>
     <% end %>
