--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,22 @@
 <!-- Add the ability to add comment on this recipe -->
-<h1>Edit under construction</h1>
+<%= render 'shared/page_title', title: "Edit Your Comment" %>
+
+<div class="row">
+  <div class="col-md-12">
+    <%= form_for([@comment], {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :description, "Comment" %>
+        </div>
+        <div class="col-md-8">
+          <%= f.text_area :description, rows: 2, class: "form-control", placeholder: "Enter Comment Here" %>
+        </div>
+        <!-- <div class="form-group">
+          <div class="col-md-offset-2 col-md-10"> -->
+            <!-- This will call the create action in the Comments controller -->
+            <%= f.submit "Update Comment", class: "btn btn-primary btn-sm btn-mybtn1" %>
+          <!-- </div> -->
+      </div>
+    <% end %>
+  </div>
+</div>
