--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,12 +26,13 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chefs <span class="caret"></span></a>
             <ul class="dropdown-menu my-dropdown-menu">
               <li><%= link_to "Chef Listing", chefs_path %></li>
+              <li role="separator" class="divider"></li>
               <li><%= link_to "Create a new chef", signup_path %></li>
-              <li><a href="#">Something else here</a></li>
+              <!-- <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Separated link</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">One more separated link</a></li> -->
             </ul>
           </li>
 <!-- *********************************  Recipes ************************************** -->
@@ -40,13 +41,15 @@
 
               <ul class="dropdown-menu my-dropdown-menu">
                 <li><%= link_to "View my recipes", chef_path(current_chef) %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to "Create a new recipe", new_recipe_path %></li>
-                <li><a href="#">Another action</a></li>
+                <li role="separator" class="divider"></li>
+                <!-- <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
+                <li role="separator" class="divider"></li> -->
                 <li><%= link_to "View all recipes", recipes_path %></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
+                <!-- <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li> -->
               </ul>
           </li>
 <!-- *********************************  Ingredients ************************************** -->
@@ -68,7 +71,7 @@
       <% end %>
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search - under construction">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
