--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -67,8 +67,23 @@
                 <% end %> -->
               </ul>
           </li>
-        </ul>
-      <% end %>
+     <!-- *******************************************   Chef Chat ******************************* -->
+        <!-- <li class="dropdown"> -->
+          <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chef Chatroom<span class="caret"></span></a>
+
+            <ul class="dropdown-menu my-dropdown-menu"> -->
+          <li><%= link_to "Chef Chatroom", chat_path%></li>
+              <!-- <% if logged_in? && current_chef.admin? %>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "New Ingredient", new_ingredient_path %></li>
+              <% end %> -->
+              <!-- <% Ingredient.all.each do |ing| %>
+                <li><%= link_to ing.name.capitalize, ingredient_path(ing) %></li>
+              <% end %> -->
+            <!-- </ul> -->
+        </li>
+      </ul>
+    <% end %>
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search - under construction">
