--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -225,3 +225,14 @@
   position: relative;
   overflow: auto;
 }
+.comment_message {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.comment_messages {
+  border: 1px solid #073B15;
+  height: 30em;
+  position: relative;
+  overflow: auto;
+}
