--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,7 +4,7 @@
       <%= gravatar_for(comment.chef, size: 60) %>
     </section>
   </div>
-  <div id = "messages" class="col-md-8 well">
+  <div id = "comment_messages" class="col-md-8 well">
     <p><%= comment.description %></p>
     <p>
       <span class="quiet"><small>Created:<%= time_ago_in_words(comment.created_at) %> ago by <%= comment.chef.name %></small></span>
