--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,11 +1,10 @@
-<div class="message">
+<div class="message"> <!-- Chatroom message -->
   <p>
-    <!-- we get the message object from the @message instance passed from the message show page -->
-    <small><em>Created <%= time_ago_in_words(message.created_at) %>
-                                                  ago</em></small>
+
+    <small><em>Created <%= time_ago_in_words(message.created_at) %>       ago</em></small>
   </p>
   <p>
-    <%= gravatar_for(message.chef, size: 50) %>
+    <!-- <%#= gravatar_for(message.chef, size: 50) %> -->
     <strong><%= message.chef.name.capitalize %></strong>
     <span class="content">
       <%= message.content %>
